{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 2784,
  "lineage": "4e96e55e-ab2b-2109-c802-04b2bb59e087",
  "resources": [
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d459c4c525ef67e",
            "arn": "arn:aws:ec2:eu-central-1:811371113121:instance/i-08af84ce121cf98ce",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08af84ce121cf98ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "eks_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0fd4a33f69b17bd97"
              }
            ],
            "primary_network_interface_id": "eni-0fd4a33f69b17bd97",
            "private_dns": "ip-15-55-1-12.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "15.55.1.12",
            "public_dns": "ec2-3-127-107-249.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.127.107.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0240e8b40375a295c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-052738d73ed3f837d",
            "tags": {
              "Name": "kubernetes-bastion"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "kubernetes-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f8deb23abb3835a9"
            ]
          },
          "dependencies": [
            "module.workload-development.aws_key_pair.eks_key_pair",
            "module.workload-development.aws_network_interface.nat_inst_eni",
            "module.workload-development.aws_security_group.bastion_host_security_group",
            "module.workload-development.aws_subnet.public_subnet",
            "module.workload-development.aws_vpc.kubernetes_vpc",
            "module.workload-development.data.aws_ami.amazon_linux"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0abbe417ed83c0b29",
            "arn": "arn:aws:ec2:eu-central-1:811371113121:instance/i-022d8a23f5a4465f1",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance_s3_acces_profile",
            "id": "i-022d8a23f5a4465f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "eks_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0a9addb508e7f113b"
              }
            ],
            "primary_network_interface_id": "eni-0a9addb508e7f113b",
            "private_dns": "ip-15-55-10-12.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "15.55.10.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06cb4813e88efc74d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02830e798bc8abe91",
            "tags": {
              "Name": "golinuxcloud-k8s-master",
              "Name_": "kubernetes-master",
              "kubernetes.io/cluster/golinuxcloud": "owned"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "golinuxcloud-k8s-master",
              "Name_": "kubernetes-master",
              "kubernetes.io/cluster/golinuxcloud": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c9e5b74cfcfc878"
            ]
          },
          "dependencies": [
            "module.workload-development.aws_iam_instance_profile.instance_s3_acces_profile",
            "module.workload-development.aws_iam_role.instance_s3_acces_policy",
            "module.workload-development.aws_instance.bastion",
            "module.workload-development.aws_key_pair.eks_key_pair",
            "module.workload-development.aws_network_interface.eks_master_eni",
            "module.workload-development.aws_network_interface.nat_inst_eni",
            "module.workload-development.aws_security_group.bastion_host_security_group",
            "module.workload-development.aws_security_group.kubernetes_master_security_group",
            "module.workload-development.aws_security_group.kubernetes_worker_security_group",
            "module.workload-development.aws_subnet.private_subnet",
            "module.workload-development.aws_subnet.public_subnet",
            "module.workload-development.aws_vpc.kubernetes_vpc",
            "module.workload-development.data.aws_ami.amazon_linux",
            "module.workload-development.data.aws_ami.ubuntu"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0abbe417ed83c0b29",
            "arn": "arn:aws:ec2:eu-central-1:811371113121:instance/i-0ef00bfed3926748b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance_s3_acces_profile",
            "id": "i-0ef00bfed3926748b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "eks_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f46ab5bad69e34a9"
              }
            ],
            "primary_network_interface_id": "eni-0f46ab5bad69e34a9",
            "private_dns": "ip-15-55-10-13.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "15.55.10.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0419feb84259a2b46",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02830e798bc8abe91",
            "tags": {
              "Name": "worker_node_0",
              "Name_": "k8s-worker-0"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "worker_node_0",
              "Name_": "k8s-worker-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05f4b4fe832c09c2c"
            ]
          },
          "dependencies": [
            "module.workload-development.aws_iam_instance_profile.instance_s3_acces_profile",
            "module.workload-development.aws_iam_role.instance_s3_acces_policy",
            "module.workload-development.aws_instance.bastion",
            "module.workload-development.aws_instance.kubernetes_master",
            "module.workload-development.aws_key_pair.eks_key_pair",
            "module.workload-development.aws_network_interface.eks_master_eni",
            "module.workload-development.aws_network_interface.eks_worker_eni",
            "module.workload-development.aws_network_interface.nat_inst_eni",
            "module.workload-development.aws_security_group.bastion_host_security_group",
            "module.workload-development.aws_security_group.kubernetes_master_security_group",
            "module.workload-development.aws_security_group.kubernetes_worker_security_group",
            "module.workload-development.aws_subnet.private_subnet",
            "module.workload-development.aws_subnet.public_subnet",
            "module.workload-development.aws_vpc.kubernetes_vpc",
            "module.workload-development.data.aws_ami.amazon_linux",
            "module.workload-development.data.aws_ami.ubuntu"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0abbe417ed83c0b29",
            "arn": "arn:aws:ec2:eu-central-1:811371113121:instance/i-0b1e74ffc001a3ef0",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance_s3_acces_profile",
            "id": "i-0b1e74ffc001a3ef0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "eks_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-010561c2555216a4c"
              }
            ],
            "primary_network_interface_id": "eni-010561c2555216a4c",
            "private_dns": "ip-15-55-10-14.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "15.55.10.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e4f5f832a42a74c0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02830e798bc8abe91",
            "tags": {
              "Name": "worker_node_1",
              "Name_": "k8s-worker-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "worker_node_1",
              "Name_": "k8s-worker-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05f4b4fe832c09c2c"
            ]
          },
          "dependencies": [
            "module.workload-development.aws_iam_instance_profile.instance_s3_acces_profile",
            "module.workload-development.aws_iam_role.instance_s3_acces_policy",
            "module.workload-development.aws_instance.bastion",
            "module.workload-development.aws_instance.kubernetes_master",
            "module.workload-development.aws_key_pair.eks_key_pair",
            "module.workload-development.aws_network_interface.eks_master_eni",
            "module.workload-development.aws_network_interface.eks_worker_eni",
            "module.workload-development.aws_network_interface.nat_inst_eni",
            "module.workload-development.aws_security_group.bastion_host_security_group",
            "module.workload-development.aws_security_group.kubernetes_master_security_group",
            "module.workload-development.aws_security_group.kubernetes_worker_security_group",
            "module.workload-development.aws_subnet.private_subnet",
            "module.workload-development.aws_subnet.public_subnet",
            "module.workload-development.aws_vpc.kubernetes_vpc",
            "module.workload-development.data.aws_ami.amazon_linux",
            "module.workload-development.data.aws_ami.ubuntu"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0abbe417ed83c0b29",
            "arn": "arn:aws:ec2:eu-central-1:811371113121:instance/i-0580cba16fb43292e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance_s3_acces_profile",
            "id": "i-0580cba16fb43292e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "eks_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-00383aedee095544e"
              }
            ],
            "primary_network_interface_id": "eni-00383aedee095544e",
            "private_dns": "ip-15-55-10-15.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "15.55.10.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0723273b839491091",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02830e798bc8abe91",
            "tags": {
              "Name": "worker_node_2",
              "Name_": "k8s-worker-2"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "worker_node_2",
              "Name_": "k8s-worker-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05f4b4fe832c09c2c"
            ]
          },
          "dependencies": [
            "module.workload-development.aws_iam_instance_profile.instance_s3_acces_profile",
            "module.workload-development.aws_iam_role.instance_s3_acces_policy",
            "module.workload-development.aws_instance.bastion",
            "module.workload-development.aws_instance.kubernetes_master",
            "module.workload-development.aws_key_pair.eks_key_pair",
            "module.workload-development.aws_network_interface.eks_master_eni",
            "module.workload-development.aws_network_interface.eks_worker_eni",
            "module.workload-development.aws_network_interface.nat_inst_eni",
            "module.workload-development.aws_security_group.bastion_host_security_group",
            "module.workload-development.aws_security_group.kubernetes_master_security_group",
            "module.workload-development.aws_security_group.kubernetes_worker_security_group",
            "module.workload-development.aws_subnet.private_subnet",
            "module.workload-development.aws_subnet.public_subnet",
            "module.workload-development.aws_vpc.kubernetes_vpc",
            "module.workload-development.data.aws_ami.amazon_linux",
            "module.workload-development.data.aws_ami.ubuntu"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:811371113121:internet-gateway/igw-013c3c1c14447961e",
            "id": "igw-013c3c1c14447961e",
            "owner_id": "811371113121",
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "vpc_id": "vpc-08551ac82e532015a"
          },
          "dependencies": [
            "module.workload-development.aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eks_master_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:811371113121:network-interface/eni-0a9addb508e7f113b",
            "id": "eni-0a9addb508e7f113b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:64:10:62:c8:a4",
            "owner_id": "811371113121",
            "private_dns_name": "ip-15-55-10-12.eu-central-1.compute.internal",
            "private_ip": "15.55.10.12",
            "private_ip_list": [
              "15.55.10.12"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "15.55.10.12"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09c9e5b74cfcfc878"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02830e798bc8abe91",
            "tags": {
              "Name": "primary_master_network_interface_eks"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "primary_master_network_interface_eks"
            }
          },
          "dependencies": [
            "module.workload-development.aws_security_group.bastion_host_security_group",
            "module.workload-development.aws_security_group.kubernetes_master_security_group",
            "module.workload-development.aws_security_group.kubernetes_worker_security_group",
            "module.workload-development.aws_subnet.private_subnet",
            "module.workload-development.aws_vpc.kubernetes_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eks_worker_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:811371113121:network-interface/eni-0f46ab5bad69e34a9",
            "id": "eni-0f46ab5bad69e34a9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:6a:02:65:49:be",
            "owner_id": "811371113121",
            "private_dns_name": "ip-15-55-10-13.eu-central-1.compute.internal",
            "private_ip": "15.55.10.13",
            "private_ip_list": [
              "15.55.10.13"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "15.55.10.13"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05f4b4fe832c09c2c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02830e798bc8abe91",
            "tags": {
              "Name": "primary_worker_network_interface_eks"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "primary_worker_network_interface_eks"
            }
          },
          "dependencies": [
            "module.workload-development.aws_security_group.kubernetes_worker_security_group",
            "module.workload-development.aws_subnet.private_subnet",
            "module.workload-development.aws_vpc.kubernetes_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:811371113121:network-interface/eni-010561c2555216a4c",
            "id": "eni-010561c2555216a4c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:77:32:cd:39:72",
            "owner_id": "811371113121",
            "private_dns_name": "ip-15-55-10-14.eu-central-1.compute.internal",
            "private_ip": "15.55.10.14",
            "private_ip_list": [
              "15.55.10.14"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "15.55.10.14"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05f4b4fe832c09c2c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02830e798bc8abe91",
            "tags": {
              "Name": "primary_worker_network_interface_eks"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "primary_worker_network_interface_eks"
            }
          },
          "dependencies": [
            "module.workload-development.aws_security_group.kubernetes_worker_security_group",
            "module.workload-development.aws_subnet.private_subnet",
            "module.workload-development.aws_vpc.kubernetes_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:811371113121:network-interface/eni-00383aedee095544e",
            "id": "eni-00383aedee095544e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:9e:63:91:1d:7a",
            "owner_id": "811371113121",
            "private_dns_name": "ip-15-55-10-15.eu-central-1.compute.internal",
            "private_ip": "15.55.10.15",
            "private_ip_list": [
              "15.55.10.15"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "15.55.10.15"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05f4b4fe832c09c2c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02830e798bc8abe91",
            "tags": {
              "Name": "primary_worker_network_interface_eks"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "primary_worker_network_interface_eks"
            }
          },
          "dependencies": [
            "module.workload-development.aws_security_group.kubernetes_worker_security_group",
            "module.workload-development.aws_subnet.private_subnet",
            "module.workload-development.aws_vpc.kubernetes_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nat_inst_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:811371113121:network-interface/eni-0fd4a33f69b17bd97",
            "id": "eni-0fd4a33f69b17bd97",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:0d:10:2c:ea:24",
            "owner_id": "811371113121",
            "private_dns_name": "ip-15-55-1-12.eu-central-1.compute.internal",
            "private_ip": "15.55.1.12",
            "private_ip_list": [
              "15.55.1.12"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "15.55.1.12"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f8deb23abb3835a9"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-052738d73ed3f837d",
            "tags": {
              "Name": "primary_network_interface_nat"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "primary_network_interface_nat"
            }
          },
          "dependencies": [
            "module.workload-development.aws_security_group.bastion_host_security_group",
            "module.workload-development.aws_subnet.public_subnet",
            "module.workload-development.aws_vpc.kubernetes_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:811371113121:route-table/rtb-0e41c8e82ef58f767",
            "id": "rtb-0e41c8e82ef58f767",
            "owner_id": "811371113121",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0fd4a33f69b17bd97",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "15.55.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0fd4a33f69b17bd97",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08551ac82e532015a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.workload-development.aws_instance.bastion",
            "module.workload-development.aws_key_pair.eks_key_pair",
            "module.workload-development.aws_network_interface.nat_inst_eni",
            "module.workload-development.aws_security_group.bastion_host_security_group",
            "module.workload-development.aws_subnet.public_subnet",
            "module.workload-development.aws_vpc.kubernetes_vpc",
            "module.workload-development.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:811371113121:route-table/rtb-0e3df2e3cb4f9a6ce",
            "id": "rtb-0e3df2e3cb4f9a6ce",
            "owner_id": "811371113121",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013c3c1c14447961e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08551ac82e532015a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.workload-development.aws_internet_gateway.my_igw",
            "module.workload-development.aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee5447077c4ac90c",
            "route_table_id": "rtb-0e41c8e82ef58f767",
            "subnet_id": "subnet-02830e798bc8abe91"
          },
          "dependencies": [
            "module.workload-development.aws_instance.bastion",
            "module.workload-development.aws_key_pair.eks_key_pair",
            "module.workload-development.aws_network_interface.nat_inst_eni",
            "module.workload-development.aws_route_table.private_rt",
            "module.workload-development.aws_security_group.bastion_host_security_group",
            "module.workload-development.aws_subnet.private_subnet",
            "module.workload-development.aws_subnet.public_subnet",
            "module.workload-development.aws_vpc.kubernetes_vpc",
            "module.workload-development.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea1b3186acc0136d",
            "route_table_id": "rtb-0e3df2e3cb4f9a6ce",
            "subnet_id": "subnet-052738d73ed3f837d"
          },
          "dependencies": [
            "module.workload-development.aws_internet_gateway.my_igw",
            "module.workload-development.aws_route_table.public_rt",
            "module.workload-development.aws_subnet.public_subnet",
            "module.workload-development.aws_vpc.kubernetes_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:811371113121:security-group/sg-0f8deb23abb3835a9",
            "description": "Allow SSH bastion inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8deb23abb3835a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "15.55.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "bastion-host-sg-20230313003708811400000003",
            "name_prefix": "bastion-host-sg-",
            "owner_id": "811371113121",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-host-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "bastion-host-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08551ac82e532015a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.workload-development.aws_vpc.kubernetes_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes_master_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:811371113121:security-group/sg-09c9e5b74cfcfc878",
            "description": "Allow kubernetes_master inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c9e5b74cfcfc878",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ping",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-05f4b4fe832c09c2c"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f8deb23abb3835a9"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f4b4fe832c09c2c"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f4b4fe832c09c2c"
                ],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "kubernetes-master-sg-20230313003710855700000007",
            "name_prefix": "kubernetes-master-sg-",
            "owner_id": "811371113121",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes-master-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "kubernetes-master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08551ac82e532015a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.workload-development.aws_security_group.bastion_host_security_group",
            "module.workload-development.aws_security_group.kubernetes_worker_security_group",
            "module.workload-development.aws_vpc.kubernetes_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes_worker_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:811371113121:security-group/sg-05f4b4fe832c09c2c",
            "description": "Allow kubernetes_worker inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f4b4fe832c09c2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10255
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "kubernetes-worker-sg-20230313003708801500000002",
            "name_prefix": "kubernetes-worker-sg-",
            "owner_id": "811371113121",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes-worker-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "kubernetes-worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08551ac82e532015a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.workload-development.aws_vpc.kubernetes_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:811371113121:subnet/subnet-02830e798bc8abe91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "15.55.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02830e798bc8abe91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811371113121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-08551ac82e532015a"
          },
          "dependencies": [
            "module.workload-development.aws_vpc.kubernetes_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:811371113121:subnet/subnet-052738d73ed3f837d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "15.55.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052738d73ed3f837d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811371113121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-08551ac82e532015a"
          },
          "dependencies": [
            "module.workload-development.aws_vpc.kubernetes_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.workload-development",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubernetes_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:811371113121:vpc/vpc-08551ac82e532015a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "15.55.0.0/16",
            "default_network_acl_id": "acl-0d976fd57bf8d3950",
            "default_route_table_id": "rtb-0bba5a3e2c1bfcf3c",
            "default_security_group_id": "sg-0e7da30e5f23896de",
            "dhcp_options_id": "dopt-0ea24767",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08551ac82e532015a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bba5a3e2c1bfcf3c",
            "owner_id": "811371113121",
            "tags_all": {
              "ManagedBy": "Terraform"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}